--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${PG_USER}
 spring.datasource.password=${PG_PASSWORD}
 spring.datasource.url=${PG_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
 # Cloudinary
 cloudinary.name=${CLOUDINARY_NAME}
