--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ cloudinary.key=${CLOUDINARY_API_KEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
 # JWT
 jwt.secret=${JWT_SECRET}
+# Mailgun
+mailgun.apikey=${MAILGUN_API_KEY}
+mailgun.domainname=${MAILGUN_DOMAIN_NAME}
