--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ cloudinary.secret=${CLOUDINARY_SECRET}
 # JWT
 jwt.secret=${JWT_SECRET}
 # Mailgun
-mailgun.apikey=${MAILGUN_API_KEY}
-mailgun.domainname=${MAILGUN_DOMAIN_NAME}
+mailgun.api.key=${MAILGUN_API_KEY}
+mailgun.domain.name=${MAILGUN_DOMAIN_NAME}
